Bug 269299 - source lines ordered in descending order
Summary: source lines ordered in descending order
Status: RESOLVED FIXED
Alias: None
Product: kompare
Classification: Applications
Component: navigationpart (other bugs)
Version First Reported In: 4.0.0
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Kompare bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-24 10:57 UTC by Toralf Förster
Modified: 2011-06-24 03:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Toralf Förster 2011-03-24 10:57:32 UTC
Version:           4.0.0 (using KDE 4.6.1) 
OS:                Linux

I realized this after I upgraded from 4.4.5 to 4.6.1.

Reproducible: Didn't try




OS: Linux (i686) release 2.6.38.1
Compiler: i686-pc-linux-gnu-gcc
Comment 1 Toralf Förster 2011-04-14 13:12:20 UTC
The similar happens for file names, they are sorted from 'Z' to 'A'
Comment 2 BlakeDude 2011-05-26 19:56:16 UTC
This bug is minor, but is extremely annoying.  I hope it gets fixed soon.  Thanks.
Comment 3 Christoph Feck 2011-06-23 15:28:19 UTC
SVN commit 1238160 by cfeck:

Set sort order

CCBUG: 269299


 M  +4 -0      komparenavtreepart.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1238160
Comment 4 Christoph Feck 2011-06-23 15:29:44 UTC
SVN commit 1238161 by cfeck:

Set sort order (backport of r1238160)

BUG: 269299
FIXED-IN: 4.7.0


 M  +4 -0      komparenavtreepart.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1238161
Comment 5 BlakeDude 2011-06-23 19:04:14 UTC
Thanks for the fix.  I was able to patch 4.0.0 with the changes, so I don't have to wait for 4.7.0 to become stable in Gentoo.
Comment 6 Kevin Kofler 2011-06-24 03:33:45 UTC
Backported to 4.6.5:
http://websvn.kde.org/?revision=1238190&view=revision

(Looks like the keywords weren't used, maybe because the bug was already closed.)