Set sort order

Backport revision 1238160 by cfeck from trunk.

BUG: 269299
FIXED-IN: 4.6.5

svn path=/branches/KDE/4.6/kdesdk/kompare/; revision=1238190